--- a/.github/workflows/KeepAlive.yml
+++ b/.github/workflows/KeepAlive.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: 'Avoid Github Workflow being suspended'
-        run: echo $(cat /proc/sys/kernel/random/uuid) > UUID.txt
+        run: echo $(cat /proc/sys/kernel/random/uuid) > KeepAlive.txt
       
       - name: 'Commit Files'
         id: commit
@@ -21,7 +21,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
-          git diff --quiet && git diff --staged --quiet || git commit -am '是否继续白嫖：[是] —— 继续白嫖成功！'
+          git diff --quiet && git diff --staged --quiet || git commit -am '「GitHub Action」保活成功！'
           echo ::set-output name=status::success
            
       - name: 'GitHub Push'
