--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,5 @@ jobs:
           BDUSS: ${{ secrets.BDUSS }}
           SERVERCHENKEY: ${{ secrets.SERVERCHENKEY }}
         run: python main.py
+      - name: ServerChan
+        run: serverchan.py
