--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 'Start Sign'
         env:
           BDUSS: ${{ secrets.BDUSS }}
-          SERVERCHENKEY: ${{ secrets.SERVERCHENKEY }}
+          SERVERCHAN: ${{ secrets.SERVERCHAN }}
         run: python main.py
       - name: ServerChan
         run: serverchan.py
