--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,10 @@ jobs:
         uses: actions/setup-python@v1
       - name: 'Install dependencies'
         run: python -m pip install --upgrade requests
+      - name: 'Start Sign'
+        env:
+          BDUSS: ${{ secrets.BDUSS }}
+        run: python main.py
       - name: 'Start Meow'
         env:
           MEOW_NAME: ${{ secrets.MEOW_NAME }}
